--- a/sass/Helpers/_variables.scss
+++ b/sass/Helpers/_variables.scss
@@ -4,6 +4,7 @@ $color-gray-1: #555;
 $color-gray-2: #d5d4d2;
 $color-gray-3: #ddd;
 $color-gray-4: #999;
+$color-gray-5: #404040;
 
 $color-green-0: #1dbf73;
 $color-green-1: #19a463;
@@ -20,6 +21,7 @@ $fs-1: 24px;
 $fs-2: 14px;
 $fs-3: 32px;
 $fs-4: 40px;
+$fs-5: 48px;
 
 $fw-0: 400;
 $fw-1: 600;
