--- a/sass/Components/_carousel.scss
+++ b/sass/Components/_carousel.scss
@@ -2,18 +2,58 @@
   background-image: url(../../img/rikita.jfif);
   height: 800px;
   background-repeat: no-repeat;
-  position: relative;
+  background-size: contain;
   .carousel__content {
     max-width: 650px;
-    padding-bottom: 32px;
-    .fiverrNavbar__form-search {
-      position: relative;
-      .input-group {
-        .input-group-search {
-          @include searchIconPosition(absolute, 5, 8px, 16px);
+    padding-bottom: $pd-1;
+    transform: translate(-57%, 90%);
+    color: $color-white-0;
+    .carousel__header {
+      h1 {
+        font-family: "Macan", "Neue", Arial, Helvetica, sans-serif;
+        font-size: $fs-5;
+        padding-bottom: $pd-0;
+      }
+      span {
+        font-weight: $fw-2;
+      }
+      i {
+        font-weight: 500;
+      }
+      .fiverrNavbar__form-search {
+        position: relative;
+        .input-group {
+          .input-group-search {
+            @include searchIconPosition(absolute, 5, 8px, 16px);
+          }
+          input[type="search"] {
+            padding: 20px;
+            border-radius: 4px 0 0 4px;
+            padding-left: 44px;
+          }
         }
-        input[type="search"] {
-          padding-left: 44px;
+      }
+    }
+    .popular {
+      display: flex;
+      padding-top: $pd-0;
+      ul {
+        display: flex;
+        width: 100%;
+        margin-left: $mg-0;
+        list-style: none;
+        li {
+          margin-right: $mg-0;
+          white-space: nowrap;
+          a {
+            text-decoration: none;
+            border-radius: 40px;
+            line-height: $lh-3 - 3;
+            @include styleButton($color-white-0, transparent, #fff, $fs-0 - 2, $fw-1, 3px, $pd-4 + 5);
+            &:hover {
+              @include hoverButton($color-gray-5, $color-white-0, $color-white-0);
+            }
+          }
         }
       }
     }
