update business section

--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,56 @@
+.owl-carousel button:focus {
+  outline: none;
+}
+
+.owl-carousel .owl-nav button.owl-prev, .owl-carousel .owl-nav button.owl-next {
+  color: #555555;
+  background-color: #fff;
+  width: 45px;
+  height: 45px;
+  line-height: 45px;
+  border-radius: 50%;
+  box-shadow: 0 2px 8px 2px #555;
+  font-size: 49px;
+  position: absolute;
+  top: 40%;
+}
+
+.owl-carousel .owl-nav button.owl-prev:hover, .owl-carousel .owl-nav button.owl-next:hover {
+  background-color: #fff;
+  color: #555555;
+}
+
+.owl-carousel .owl-nav button.owl-prev {
+  left: -25px;
+}
+
+.owl-carousel .owl-nav button.owl-next {
+  right: -25px;
+}
+
 * {
   margin: 0;
   padding: 0;
 }
 
 body {
-  font-family: "Roboto", Helvetica, sans-serif;
-  font-size: 16px;
+  font-family: Helvetica, sans-serif;
+  font-size: 15px;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  font-weight: 600;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
 }
 
 header {
@@ -72,6 +117,30 @@ header .fiverrNavbar .fiverrNavbar__right .navbar-nav .nav-link:hover {
   color: #1dbf73;
 }
 
+header .categoriesMenu {
+  width: 70%;
+  margin: 0 auto;
+}
+
+header .categoriesMenu::before {
+  content: "";
+  display: block;
+  border-top: 1px solid #d5d4d2;
+  width: 100%;
+}
+
+header .categoriesMenu nav {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+
+header .categoriesMenu ul li a {
+  color: #62646a;
+  font-size: 16px;
+  line-height: 24px;
+  padding: 8px 0;
+}
+
 .sticky {
   position: fixed;
   width: 100%;
@@ -84,6 +153,300 @@ header .fiverrNavbar .fiverrNavbar__right .navbar-nav .nav-link:hover {
     max-width: 1400px;
     margin: 0 auto;
   }
+}
+
+.partners {
+  padding-top: 0;
+  padding-bottom: 0;
+  background-color: #fafafa;
+}
+
+.partners .partners__content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.partners .partners__content span {
+  display: none;
+  padding-right: 20px;
+  color: #b5b6ba;
+  font-weight: 600;
+  font-size: 17px;
+  width: 120px;
+  height: 70px;
+  line-height: 70px;
+}
+
+.partners .partners__content ul {
+  padding: 0 24px;
+  height: 70px;
+  justify-content: center;
+  align-items: center;
+  width: auto;
+  margin-top: 1rem;
+}
+
+.partners .partners__content ul li {
+  padding-right: 60px;
+}
+
+.partners .partners__content ul li img {
+  display: block;
+}
+
+@media screen and (min-width: 1200px) {
+  .partners .partners__content span {
+    display: block;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .partners__content ul li {
+    padding-right: 60px;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  .partners__content ul li {
+    padding-right: 24px;
+  }
+}
+
+.services {
+  padding: 64px 0;
+}
+
+.services .services__content {
+  width: 70%;
+  margin: auto;
+}
+
+.selling-point {
+  background-color: #f1fdf7;
+}
+
+.selling-point .selling-point__content {
+  padding-top: 96px;
+  padding-bottom: 46px;
+  width: 70%;
+  margin: 0 auto 48px;
+}
+
+.selling-point .selling-point__content .row {
+  flex: 0 1 auto;
+}
+
+.selling-point .selling-point__content .row .selling-point--left {
+  padding-right: 11%;
+}
+
+.selling-point .selling-point__content .row .selling-point--left h2 {
+  padding-bottom: 24px;
+}
+
+.selling-point .selling-point__content .row .selling-point--left ul {
+  list-style: none;
+}
+
+.selling-point .selling-point__content .row .selling-point--left ul li {
+  padding-bottom: 7px;
+}
+
+.selling-point .selling-point__content .row .selling-point--left h6,
+.selling-point .selling-point__content .row .selling-point--left p {
+  font-size: 18px;
+  line-height: 26px;
+}
+
+.selling-point .selling-point__content .row .selling-point--left h6 {
+  font-weight: 600;
+}
+
+.selling-point .selling-point__content .row .selling-point--right .video-modal {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  position: relative;
+}
+
+.selling-point .selling-point__content .row .selling-point--right .video-modal .picture-wrapper {
+  position: relative;
+  cursor: pointer;
+}
+
+.selling-point .selling-point__content .row .selling-point--right .video-modal .picture-wrapper::after {
+  content: "";
+  display: inline-block;
+  background: url(https://fiverr-res.cloudinary.com/npm-assets/@fiverr/logged_out_homepage_perseus/apps/desktop-play-button.c1196d6.png) no-repeat;
+  background-size: 80px;
+  width: 80px;
+  height: 80px;
+  position: absolute;
+  z-index: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#myVideo .modal-content {
+  width: 60vw;
+  background-color: transparent;
+  border: none;
+}
+
+.categories .categories__content {
+  width: 70%;
+  margin: 0 auto;
+}
+
+.categories .categories__content h2 {
+  padding-bottom: 24px;
+  margin-bottom: 40px;
+}
+
+.categories .categories__content .categories-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.categories .categories__content .categories-list li {
+  width: 20%;
+  padding-bottom: 55px;
+  text-align: center;
+  list-style: none;
+  list-style-image: none;
+}
+
+.categories .categories__content .categories-list li > a {
+  color: #222325;
+  text-align: center;
+  position: relative;
+  display: inline-block;
+}
+
+.categories .categories__content .categories-list li > a::after {
+  content: "";
+  position: absolute;
+  top: 45px;
+  right: 50%;
+  transform: translateX(50%);
+  padding: 0 0 8px;
+  width: 48px;
+  border-bottom: 2px solid #c5c6c9;
+  transition: border-color ease-in-out, padding ease-in-out;
+}
+
+.categories .categories__content .categories-list li > a:hover::after {
+  border-color: #1dbf73;
+  padding: 0 50px 8px;
+}
+
+.categories .categories__content .categories-list li > a img {
+  display: block;
+  width: 48px;
+  height: 48px;
+  margin: 0 auto 15px;
+}
+
+@media screen and (min-width: 900px) {
+  .categories-list li {
+    width: 50%;
+  }
+}
+
+@media screen and (min-width: 576px) {
+  .categories-list li {
+    width: 33.33%;
+    padding: 0 10px 32px;
+  }
+}
+
+.business {
+  background-color: #0d084d;
+}
+
+.business .business__content {
+  padding: 96px 0;
+  width: 70%;
+  margin: 0 auto 48px;
+}
+
+.business .business__content .business--left {
+  margin-bottom: 0;
+}
+
+.business .business__content .business--left small {
+  display: block;
+  padding-bottom: 32px;
+  font-size: smaller;
+}
+
+.business .business__content .business--left .fiverr-business-logo {
+  display: inline-block;
+  vertical-align: top;
+  margin-right: 10px;
+}
+
+.business .business__content .business--left .logo-span {
+  text-transform: uppercase;
+  background-color: #584aff;
+  display: inline-flex;
+  align-items: center;
+  padding: 3px 7px 2px;
+  border: 1px solid #584aff;
+  border-radius: 10px;
+  text-decoration: none;
+  text-align: center;
+  color: #fff;
+  font-size: 10px;
+  font-weight: 700;
+  line-height: 100%;
+}
+
+.business .business__content .business--left h2 {
+  max-width: 450px;
+  color: #fff;
+  padding-bottom: 24px;
+}
+
+.business .business__content .business--left p {
+  padding-bottom: 32px;
+  max-width: 450px;
+  color: #fff;
+  font-size: 18px;
+  line-height: 26px;
+}
+
+.business .business__content .business--left ul {
+  list-style: none;
+  margin-bottom: 3rem;
+}
+
+.business .business__content .business--left ul li {
+  padding-bottom: 12px;
+  font-size: 1rem;
+}
+
+.business .business__content .business--left ul span {
+  color: #fff;
+}
+
+.business .business__content .business--left ul span i {
+  width: 24px;
+  height: 24px;
+  color: #7a7d85;
+  margin-right: 10px;
+  min-width: 24px;
+  font-size: 24px;
+}
+
+.business .business__content .business--left button {
+  border-radius: 4px;
+  position: relative;
+  font-size: 1rem;
+  line-height: 100%;
+  padding: 12px 24px;
 }
 
 .btn--green {
@@ -120,70 +483,64 @@ header .fiverrNavbar .fiverrNavbar__right .navbar-nav .nav-link:hover {
   border: 1px solid #1dbf73;
 }
 
-.carousel {
-  background-image: url(../../img/rikita.jfif);
-  height: 800px;
-  background-repeat: no-repeat;
-  background-size: contain;
+.carousel #carousel__content .carousel__header {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  left: 24px;
+  bottom: 0;
+  right: 0;
+  z-index: 2;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
-.carousel .carousel__content {
-  max-width: 650px;
-  padding-bottom: 32px;
-  transform: translate(-57%, 90%);
+.carousel #carousel__content .carousel__header .header {
   color: #fff;
 }
 
-.carousel .carousel__content .carousel__header h1 {
+.carousel #carousel__content .carousel__header .header h1 {
   font-family: "Macan", "Neue", Arial, Helvetica, sans-serif;
   font-size: 48px;
   padding-bottom: 24px;
 }
 
-.carousel .carousel__content .carousel__header span {
+.carousel #carousel__content .carousel__header .header span {
   font-weight: 700;
 }
 
-.carousel .carousel__content .carousel__header i {
+.carousel #carousel__content .carousel__header .header i {
   font-weight: 500;
 }
 
-.carousel .carousel__content .carousel__header .fiverrNavbar__form-search {
-  position: relative;
-}
-
-.carousel .carousel__content .carousel__header .fiverrNavbar__form-search .input-group .input-group-search {
+.carousel #carousel__content .carousel__header .header .fiverrNavbar__form-search .input-group .input-group-search {
   position: absolute;
   z-index: 5;
   top: 8px;
   left: 16px;
 }
 
-.carousel .carousel__content .carousel__header .fiverrNavbar__form-search .input-group input[type="search"] {
+.carousel #carousel__content .carousel__header .header .fiverrNavbar__form-search .input-group input[type="search"] {
   padding: 20px;
   border-radius: 4px 0 0 4px;
   padding-left: 44px;
 }
 
-.carousel .carousel__content .popular {
+.carousel #carousel__content .carousel__header .header .popular {
   display: flex;
   padding-top: 24px;
 }
 
-.carousel .carousel__content .popular ul {
-  display: flex;
-  width: 100%;
+.carousel #carousel__content .carousel__header .header .popular ul {
   margin-left: 12px;
-  list-style: none;
 }
 
-.carousel .carousel__content .popular ul li {
+.carousel #carousel__content .carousel__header .header .popular ul li {
   margin-right: 12px;
-  white-space: nowrap;
 }
 
-.carousel .carousel__content .popular ul li a {
-  text-decoration: none;
+.carousel #carousel__content .carousel__header .header .popular ul li a {
   border-radius: 40px;
   line-height: 24px;
   color: #fff;
@@ -195,9 +552,70 @@ header .fiverrNavbar .fiverrNavbar__right .navbar-nav .nav-link:hover {
   cursor: pointer;
 }
 
-.carousel .carousel__content .popular ul li a:hover {
+.carousel #carousel__content .carousel__header .header .popular ul li a:hover {
   color: #404040;
   background-color: #fff;
   border: 1px solid #fff;
+}
+
+.carousel #carousel__content.carousel.carousel-fade .carousel-item {
+  display: block;
+  opacity: 0;
+  transition: opacity ease-out 0.7s;
+}
+
+.carousel #carousel__content.carousel.carousel-fade .carousel-item.active {
+  opacity: 1 !important;
+}
+
+.carousel #carousel__content .carousel-item .carousel-caption {
+  left: auto;
+}
+
+@media screen and (min-width: 1760px) {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+@media screen and (min-width: 1200px) {
+  .carousel #carousel__content .carousel__header {
+    max-width: 1400px;
+  }
+  .carousel #carousel__content .carousel__header .header {
+    max-width: 650px;
+  }
+}
+
+.card {
+  margin: 10px 10px 10px 0;
+  cursor: pointer;
+}
+
+.card .card-body {
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: #fff;
+}
+
+.card .card-body h4 {
+  font-size: 26px;
+  line-height: 140%;
+}
+
+.myNavbar ul {
+  display: flex;
+  width: 100%;
+  list-style: none;
+}
+
+.myNavbar ul li {
+  white-space: nowrap;
+}
+
+.myNavbar ul li a {
+  display: block;
+  position: relative;
+  text-decoration: none;
 }
 /*# sourceMappingURL=main.css.map */
