--- a/sass/Base/_reset.scss
+++ b/sass/Base/_reset.scss
@@ -4,6 +4,20 @@
 }
 
 body {
-  font-family: "Roboto", Helvetica, sans-serif;
-  font-size: $fs-0;
+  font-family: Helvetica, sans-serif;
+  font-size: $fs-0 - 1;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  font-weight: 600;
+}
+
+a {
+  text-decoration: none;
+  &:hover {
+    text-decoration: none;
+  }
 }
