--- a/css/main.css
+++ b/css/main.css
@@ -364,6 +364,7 @@ header .categoriesMenu ul li a {
 
 .business {
   background-color: #0d084d;
+  margin-bottom: 96px;
 }
 
 .business .business__content {
